Amélioration visuel des boutons

--- a/html/base.html
+++ b/html/base.html
@@ -57,6 +57,9 @@
             $(".navbar-burger").toggleClass("is-active");
             $(".navbar-menu").toggleClass("is-active");
         });
+        $(".button").click(function() {
+            $(this).addClass("is-loading");
+        });
         // Redirige vers la page tapé dans la barre de recherche | recheche brut, possible d'amélioration avec 
         // auto-complétion, créer une page web "page n'existe pas", recherche par motsclés, page avec une liste des 
         // pages web possibles en fonction de ce que entre l'utilisateur
