barre de navigation fixé en haut

--- a/html/base.html
+++ b/html/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="has-navbar-fixed-top">
 <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Barre de navigation -->
-    <nav class="navbar is-primary is-spaced py-0">
+    <nav class="navbar is-primary is-spaced is-fixed-top py-0">
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item is-size-5" href="https://scodoc.org/">ScoDoc</a>
