Création page "Ressources"

--- a/html/base.html
+++ b/html/base.html
@@ -24,6 +24,7 @@
                 <div class="navbar-start">
                     <!-- Liste des catégories -->
                     <a class="navbar-item" href="SAE.html">SAÉ</a>
+                    <a class="navbar-item" href="ressources.html">Ressources</a>
                     <a class="navbar-item" href="ressourcesS1.html">Semestre 1</a>
                     <a class="navbar-item" href="ressourcesS2.html">Semestre 2</a>
                 </div>
