--- a/html/base.html
+++ b/html/base.html
@@ -66,7 +66,7 @@
         // pages web possibles en fonction de ce que entre l'utilisateur
         // ex: "R101" -> ./HTML/R101.html
         $("#rechercher").keyup(function(e) {
-            if(e.keyCode == 13) {location.href = $(this).val() + ".html"}
+            if(e.keyCode == 13) {location.href = $(this).val().toUpperCase() + ".html"}
         });
     });
 </script>
