--- a/html/base.html
+++ b/html/base.html
@@ -23,6 +23,7 @@
             <div class="navbar-menu">
                 <div class="navbar-start">
                     <!-- Liste des catégories -->
+                    <a class="navbar-item" href="index.html">Accueil</a>
                     <a class="navbar-item" href="SAE.html">SAÉ</a>
                     <a class="navbar-item" href="ressources.html">Ressources</a>
                     <a class="navbar-item" href="ressourcesS1.html">Semestre 1</a>
