--- a/html/ACTemplate.html
+++ b/html/ACTemplate.html
@@ -4,7 +4,7 @@
 {% include "navigation.html" %}
 
             <div class="content">
-                <h1>{{data["ac"]}}</h1>
+                <h1>{{data["code"]}}</h1>
                 <p>{{data["titre"]}}</p>
             </div>
 {% include "navigation.html" %}
