Liste SAE mobilisé AC + page Liste des ACs

--- a/html/base.html
+++ b/html/base.html
@@ -27,10 +27,15 @@
                 <div class="navbar-start">
                     <!-- Liste des catégories -->
                     <a class="navbar-item" href="index.html">Accueil</a>
-                    <a class="navbar-item" href="SAE.html">SAÉ</a>
+                    <a class="navbar-item" href="ACs.html">ACs</a>
+                    <a class="navbar-item" href="SAE.html">SAÉs</a>
                     <a class="navbar-item" href="ressources.html">Ressources</a>
                     <a class="navbar-item" href="ressourcesS1.html">Semestre 1</a>
                     <a class="navbar-item" href="ressourcesS2.html">Semestre 2</a>
+                    <a class="navbar-item" href="index.html">Semestre 3</a>
+                    <a class="navbar-item" href="index.html">Semestre 4</a>
+                    <a class="navbar-item" href="index.html">Semestre 5</a>
+                    <a class="navbar-item" href="index.html">Semestre 6</a>
                 </div>
                 <div class="navbar-end">
                     <div class="navbar-item">
