--- a/html/indexTemplate.html
+++ b/html/indexTemplate.html
@@ -34,7 +34,7 @@
             <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <div class="tile is-child box">
-                        <a href="ressourcesS3.html"><h1 class="has-text-centered title">Semestre 3</h1></a>
+                        <a href=""><h1 class="has-text-centered title">Semestre 3</h1></a>
                         <hr>
                         <div class="content">
                             <ul>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="tile is-parent">
                     <div class="tile is-child box">
-                        <a href="ressourcesS4.html"><h1 class="has-text-centered title">Semestre 4</h1></a>
+                        <a href=""><h1 class="has-text-centered title">Semestre 4</h1></a>
                         <hr>
                         <div class="content">
                             <ul>
@@ -62,7 +62,7 @@
             <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <div class="tile is-child box">
-                        <a href="ressourcesS5.html"><h1 class="has-text-centered title">Semestre 5</h1></a>
+                        <a href=""><h1 class="has-text-centered title">Semestre 5</h1></a>
                         <hr>
                         <div class="content">
                             <ul>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="tile is-parent">
                     <div class="tile is-child box">
-                        <a href="ressourcesS6.html"><h1 class="has-text-centered title">Semestre 6</h1></a>
+                        <a href=""><h1 class="has-text-centered title">Semestre 6</h1></a>
                         <hr>
                         <div class="content">
                             <ul>
