Graphique avec choix de catégorie

--- a/html/graphTemplate.html
+++ b/html/graphTemplate.html
@@ -4,7 +4,6 @@
 <script src="https://d3js.org/d3.v5.js"></script>
 {% endblock %}
 {% block content %}
-<!--
 <div class="field is-horizontal">
     <div class="control">
         <label class="checkbox">
@@ -20,7 +19,7 @@
             ACs
         </label>
     </div>
-</div>-->
+</div>
 <svg style="border: 1px solid black; margin: auto;"></svg>
 <script src="js/graph.js"></script>
 {% endblock %}
