Graph: Ajout des catégories Semestres

--- a/html/graphTemplate.html
+++ b/html/graphTemplate.html
@@ -7,6 +7,18 @@
 <div class="field is-horizontal">
     <div class="control">
         <label class="checkbox">
+            <input id="Semestre1" class="semestre" value="S1" type="checkbox" checked>
+            Semestre 1
+        </label>
+        <label class="checkbox">
+            <input id="Semestre2" class="semestre" value="S2" type="checkbox" checked>
+            Semestre 2
+        </label>
+    </div>
+</div>
+<div class="field is-horizontal">
+    <div class="control">
+        <label class="checkbox">
             <input id="Ressources" class="categorie" type="checkbox" checked>
             Ressources
         </label>
